[package]
name = "orb_sound"
version = "0.1.0"
edition = "2021"
authors = ["Max Byshnev <max.byshnev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.14.0", features = ["wav"] }
thiserror-impl = "1.0.30"
rtrb = "0.2.0"
